firebase install & first connection ok

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,4 +14,11 @@
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+
+  <ul>
+    <li class="text" *ngFor="let item of terapeutas | async">
+      {{item.nome}}
+    </li>
+  </ul>
+
 </ion-content>
